--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@tanstack/react-query-devtools": "^5.64.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
+    "dotenv": "^16.4.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
